[package]
name = "att-arma-serenity"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.42.0"
shuttle-runtime = "0.42.0"
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = { version = "0.12.1", features = ["json"] }
serde = "1.0.188"
