[package]
name = "att-arma-serenity"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
shuttle-serenity = "0.48.0"
shuttle-runtime = "0.48.0"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = "1.40"
tracing = "0.1.40"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1"
